<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bckg_dialog"
    android:padding="20dp"
    android:layout_marginVertical="24dp"
    android:layout_marginHorizontal="50dp">

    <TextView
        android:id="@+id/dialog_prompt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_title"
        android:textColor="@color/brown"
        android:fontFamily="@font/playfair_display_semibold"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingBottom="18dp" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/title_label"
        android:textColor="@color/brown"
        android:fontFamily="@font/playfair_display_semibold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="start"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="5dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:autofillHints="Title"
        android:inputType="text"
        android:hint="@string/title_input_hint"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:fontFamily="@font/playfair_display_semibold"
        android:background="@drawable/bckg_input"/>

    <TextView
        android:id="@+id/author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/author_label"
        android:textColor="@color/brown"
        android:fontFamily="@font/playfair_display_semibold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="start"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/author_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="5dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:autofillHints="Title"
        android:inputType="text"
        android:hint="@string/author_input_hint"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:fontFamily="@font/playfair_display_semibold"
        android:background="@drawable/bckg_input"/>

    <TextView
        android:id="@+id/date_published_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/date_published_label"
        android:textColor="@color/brown"
        android:fontFamily="@font/playfair_display_semibold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="start"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/date_published_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="5dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:autofillHints="Title"
        android:hint="@string/date_published_hint"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:fontFamily="@font/playfair_display_semibold"
        android:background="@drawable/bckg_input"/>

    <TextView
        android:id="@+id/topics_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/topic_label"
        android:textColor="@color/brown"
        android:fontFamily="@font/playfair_display_semibold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="start"
        android:layout_gravity="start"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/topics_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:alignItems="center"
        app:flexDirection="row">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_tag_button"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            app:iconTint="@color/beige"
            app:iconSize="30dp"
            app:iconPadding="0dp"
            app:strokeColor="@color/brown"
            app:cornerRadius="5dp"
            app:strokeWidth="1dp" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/topics_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/topic_error_message"
        android:textColor="@color/red_500"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="11sp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_paper_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_gravity="center"
        android:text="@string/upload_paper"
        android:letterSpacing="-.001"
        android:textSize="16sp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/brown"
        android:backgroundTint="@color/white"
        android:elevation="20dp"
        app:elevation="20dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/brown"
        app:cornerRadius="5dp" />
</LinearLayout>