<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:lines="1"
            android:text="@string/page_title"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/beige"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/page_icon"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:padding="50dp"
            android:background="@drawable/bckg_input"
            android:contentDescription="@string/open_page_button"
            android:elevation="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_page"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:padding="13dp"
        android:background="#00000000"
        android:contentDescription="@string/delete_page_button"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_delete_fill"
        app:tint="@color/beige"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>